--- a/notebooks/dining_room.ipynb
+++ b/notebooks/dining_room.ipynb
@@ -2538,7 +2538,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -6832,7 +6834,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -7034,7 +7038,7 @@
    ],
    "source": [
     "# Check the significance of failed_to_place ~ study_condition\n",
-    "plot_df = plot_df = states_df.loc[~states_df['failed_to_place'].isna(), :].copy()\n",
+    "plot_df = states_df.loc[~states_df['failed_to_place'].isna(), :].copy()\n",
     "plot_df['failed_to_place'] = plot_df['failed_to_place'].astype(np.int)\n",
     "plot_df['has_dx'] = plot_df['has_dx'].astype(np.int)\n",
     "plot_df['has_ax'] = plot_df['has_ax'].astype(np.int)\n",
